<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_mask_background"
        tools:context=".MovieDetailsActivity">
    
        <ImageView
            android:id="@+id/HeaderImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="56dp"
            android:layout_marginStart="22dp"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="2sp"
            android:alpha="0.5"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableStartCompat="@drawable/ic_path" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/StartGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/EndGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <TextView
            android:id="@+id/PG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="154dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/ic_rectangle"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/FilmTitle"
            app:layout_constraintEnd_toEndOf="@id/EndGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/StartGuideline"
            app:layout_constraintTop_toBottomOf="@id/BackButton"
            android:text="@string/_13" />

        <TextView
            android:id="@+id/FilmTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:gravity="start|center_vertical"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="0sp"
            android:shadowColor="#80000000"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/EndGuideline"
            app:layout_constraintStart_toStartOf="@id/StartGuideline"
            app:layout_constraintTop_toBottomOf="@id/PG" />
    
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/TitleBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="PG,FilmTitle"
            tools:layout_editor_absoluteY="378dp" />

        <TextView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:gravity="center_vertical"
            android:textColor="@color/tags_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/EndGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/StartGuideline"
            app:layout_constraintTop_toBottomOf="@id/TitleBarrier"
            android:text="@string/action_adventure_fantasy" />
    
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/TagsLineBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tags"
            tools:layout_editor_absoluteY="401dp" />

        <RatingBar
            android:id="@+id/Rating"
            style="@style/CustomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="4dp"
            android:numStars="5"
            android:rating="4.0"
            android:stepSize="1.0"
            app:layout_constraintBottom_toTopOf="@id/RatingBarrier"
            app:layout_constraintEnd_toStartOf="@id/SumReviews"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/StartGuideline"
            app:layout_constraintTop_toBottomOf="@id/TagsLineBarrier" />
    
        <TextView
            android:id="@+id/SumReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/RatingBarrier"
            app:layout_constraintEnd_toEndOf="@id/EndGuideline"
            app:layout_constraintStart_toEndOf="@id/Rating"
            app:layout_constraintTop_toBottomOf="@id/TagsLineBarrier"
            android:text="@string/_147_reviews" />
    
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/RatingBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="Rating,SumReviews"
            tools:layout_editor_absoluteY="429dp" />
    
        <TextView
            android:id="@+id/Storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:shadowColor="#80000000"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/StorylineDetails"
            app:layout_constraintEnd_toEndOf="@id/EndGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/StartGuideline"
            app:layout_constraintTop_toBottomOf="@id/RatingBarrier" />
    
        <TextView
            android:id="@+id/StorylineDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/EndGuideline"
            app:layout_constraintStart_toStartOf="@id/StartGuideline"
            app:layout_constraintTop_toBottomOf="@id/Storyline"
            android:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe."
            tools:ignore="HardcodedText" />
    
    
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/StorylineBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="StorylineDetails"
            tools:layout_editor_absoluteY="566dp" />
    
        <TextView
            android:id="@+id/Cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingBottom="7dp"
            android:gravity="center_vertical"
            android:text="@string/cast"
            android:lineSpacingExtra="8sp"
            android:textSize="14sp"
            android:letterSpacing="-0.01"
            android:shadowColor="#80000000"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/StorylineBarrier"
            app:layout_constraintStart_toStartOf="@id/StartGuideline"
            app:layout_constraintEnd_toEndOf="@id/EndGuideline"/>

        <ImageView
            android:id="@+id/ActorImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:src="@drawable/actor1"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toTopOf="@id/ActorName1"
            app:layout_constraintEnd_toStartOf="@+id/ActorImage2"
            app:layout_constraintStart_toStartOf="@id/StartGuideline"
            app:layout_constraintTop_toBottomOf="@id/Cast" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ActorImage1Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="ActorImage1"/>
    
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ActorImage1End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="ActorImage1"/>

        <TextView
            android:id="@+id/ActorName1"
            style="@style/ActorNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/robert_downey_jr"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="@id/ActorImage1End"
            app:layout_constraintStart_toStartOf="@id/ActorImage1Start"
            app:layout_constraintTop_toBottomOf="@id/ActorImage1"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/ActorImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:src="@drawable/actor2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toTopOf="@id/ActorName2"
            app:layout_constraintEnd_toStartOf="@id/ActorImage3"
            app:layout_constraintStart_toEndOf="@id/ActorImage1"
            app:layout_constraintTop_toBottomOf="@id/Cast" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ActorImage2Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="ActorImage2"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ActorImage2End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="ActorImage2"/>

        <TextView
            android:id="@+id/ActorName2"
            style="@style/ActorNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_evans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ActorImage2End"
            app:layout_constraintStart_toStartOf="@id/ActorImage2Start"
            app:layout_constraintTop_toBottomOf="@id/ActorImage2" />

        <ImageView
            android:id="@+id/ActorImage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:src="@drawable/actor3"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toTopOf="@id/ActorName3"
            app:layout_constraintEnd_toStartOf="@id/ActorImage4"
            app:layout_constraintStart_toEndOf="@id/ActorImage2"
            app:layout_constraintTop_toBottomOf="@id/Cast" />
    
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ActorImage3Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="ActorImage3"/>
    
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ActorImage3End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="ActorImage3"/>

        <TextView
            android:id="@+id/ActorName3"
            style="@style/ActorNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_ruffalo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ActorImage3End"
            app:layout_constraintStart_toStartOf="@id/ActorImage3Start"
            app:layout_constraintTop_toBottomOf="@id/ActorImage3" />

        <ImageView
            android:id="@+id/ActorImage4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:src="@drawable/actor4"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/ActorName4"
            app:layout_constraintEnd_toEndOf="@id/EndGuideline"
            app:layout_constraintStart_toEndOf="@id/ActorImage3"
            app:layout_constraintTop_toBottomOf="@id/Cast" />
    
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ActorImage4Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="ActorImage4"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/ActorImage4End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="ActorImage4"/>

        <TextView
            android:id="@+id/ActorName4"
            style="@style/ActorNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chris_hemsworth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ActorImage4End"
            app:layout_constraintStart_toStartOf="@id/ActorImage4Start"
            app:layout_constraintTop_toBottomOf="@id/ActorImage4" />

    
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>