<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_mask_background">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/MoviesDetailsLoadingProgressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/MovieDetailsContentScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ic_mask_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MovieDetailsActivity">

            <ImageView
                android:id="@+id/HeaderImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:foreground="@drawable/preview_image_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/BackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="56dp"
                android:alpha="0.85"
                android:drawablePadding="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:lineSpacingExtra="2sp"
                android:padding="6dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_path"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/LikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:padding="6dp"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toEndOf="@id/BackButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_like_enable" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/StartGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/EndGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/PG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="154dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/ic_rectangle"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/FilmTitle"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/BackButton"
                tools:text="13+" />

            <TextView
                android:id="@+id/FilmTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="start|center_vertical"
                android:letterSpacing="-0.01"
                android:lineSpacingExtra="0sp"
                android:shadowColor="#80000000"
                android:shadowDx="0"
                android:shadowDy="6"
                android:shadowRadius="12"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/PG"
                tools:text="Avengers: End Game" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/TitleBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="PG,FilmTitle"
                tools:layout_editor_absoluteY="378dp" />

            <TextView
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center_vertical"
                android:textColor="@color/tags_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/TitleBarrier"
                tools:text="action adventure fantasy" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/TagsLineBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tags"
                tools:layout_editor_absoluteY="401dp" />

            <RatingBar
                android:id="@+id/Rating"
                style="@style/CustomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:layout_marginVertical="4dp"
                android:layout_marginEnd="4dp"
                android:numStars="5"
                android:stepSize="1.0"
                app:layout_constraintBottom_toTopOf="@id/RatingBarrier"
                app:layout_constraintEnd_toStartOf="@id/SumReviews"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/TagsLineBarrier"
                tools:rating="4.0" />

            <TextView
                android:id="@+id/SumReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="4dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4sp"
                android:textColor="#6D6D80"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/RatingBarrier"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintStart_toEndOf="@id/Rating"
                app:layout_constraintTop_toBottomOf="@id/TagsLineBarrier"
                tools:text="147 reviews" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/RatingBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="Rating,SumReviews"
                tools:layout_editor_absoluteY="429dp" />

            <TextView
                android:id="@+id/Storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4sp"
                android:shadowColor="#80000000"
                android:shadowDx="0"
                android:shadowDy="6"
                android:shadowRadius="12"
                android:text="@string/storyline"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/StorylineDetails"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/RatingBarrier" />

            <TextView
                android:id="@+id/StorylineDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:alpha="0.75"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4sp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/Storyline"
                tools:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe." />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/StorylineBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="StorylineDetails"
                tools:layout_editor_absoluteY="566dp" />

            <TextView
                android:id="@+id/Cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:letterSpacing="-0.01"
                android:lineSpacingExtra="8sp"
                android:paddingBottom="7dp"
                android:shadowColor="#80000000"
                android:shadowDx="0"
                android:shadowDy="6"
                android:shadowRadius="12"
                android:text="@string/cast"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/CastRV"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/StorylineBarrier"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/CastRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/VideosRV"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/Cast"
                tools:itemCount="4"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/actor_view_holder"
                tools:orientation="horizontal"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/VideosRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/EndGuideline"
                app:layout_constraintStart_toStartOf="@id/StartGuideline"
                app:layout_constraintTop_toBottomOf="@id/CastRV"
                tools:itemCount="1"
                tools:layotManager="horizontal"
                tools:listitem="@layout/simple_video_view_holder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>